--- a/PCFactory/styles/customStyles.css
+++ b/PCFactory/styles/customStyles.css
@@ -1,5 +1,11 @@
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .welcome-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("welcome.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/imgs/welcome.jpg");
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
@@ -13,7 +19,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: black;
+    color: white;
 }
 
 .welcome-text button {
