--- a/PCFactory/styles/shopCart.css
+++ b/PCFactory/styles/shopCart.css
@@ -5,6 +5,12 @@
     padding: 16px;
     margin-bottom: 20px;
 }
+
+.product-img {
+	max-width:100%;
+	max-height:100%
+}
+
 .table {
     margin: 0px auto;
     float: none;
